Tried to fix spacing between lines. Decided that the caps in the title are fine

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -28,8 +28,8 @@ body{
 pre{
 	margin: 0px;
 	/*font-family: 'Courier New', Courier, monospace;*/
-	font-size: 13px;
-	font-family: 'Fira Code', monospace;
+	//font-size: 13px;
+	//font-family: 'Fira Code', monospace;
 	
 	
 }
